# Royal

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
include/: royal_buf.h  royal_bytes.h  royal_customer.h  royal_graphs.h  royal_ids.h  royal_item_market.h  royal_market.h  royal_market_types.h  royal_mem.h  royal_object.h
py_tests/: __main__.py  schema_tools.py
royal/: __init__.py  items.py
scripts/: build_and_debug.bat  build_and_test.bat
src/: CMakeLists.txt  pymain.c  royal_buf.c  royal_bytes.c  royal_graphs.c  royal_ids.c  royal_market.c
stg/: market_buffer.py  market_prototype.c
tests/: CMakeLists.txt  test_royal_bytes.c  test_royal_graphs.c  test_royal_ids.c  unit_test_helpers.h
